--- a/RocketGraphics/RocketGraphics.csproj
+++ b/RocketGraphics/RocketGraphics.csproj
@@ -4,6 +4,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="OpenTK" Version="4.6.7"/>
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2"/>
   </ItemGroup>
   <PropertyGroup>
     <OutputType>Exe</OutputType>
